# test-data-agent

./: .dockerignore  .env.example  .gitignore  CUSTOM_SCHEMA_GUIDE.md  CUSTOM_SCHEMA_QUICK_START.md  DOCUMENTATION_INDEX.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  LLM_RAG_QUICK_REFERENCE.md  LLM_RAG_TESTS.md  Makefile  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  PROJECT_SUMMARY.md  RAG_TESTING_QUICK_START.md  README.md  TESTING_GUIDE.md  docker-compose.yml  prd.md  pyproject.toml  tasks.md  ui_prd.md  ui_tasks.md
.claude/: settings.local.json
.claude/agents/: python-ai-service-architect.md
.github/workflows/: ci.yml  release.yml
k8s/: .gitkeep  README.md  configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  secrets.yaml  service.yaml  serviceaccount.yaml
protos/: test_data.proto
scripts/: test_all_entities.sh  test_rag.sh
src/test_data_agent/: __init__.py  config.py  main.py
src/test_data_agent/clients/: __init__.py  claude.py  redis_client.py  vllm.py  weaviate_client.py  weaviate_schema.py
src/test_data_agent/generators/: __init__.py  base.py  hybrid.py  llm.py  rag.py  traditional.py
src/test_data_agent/prompts/: __init__.py  builder.py  system.py  templates.py
src/test_data_agent/proto/: __init__.py
src/test_data_agent/router/: __init__.py  intelligence_router.py
src/test_data_agent/schemas/: __init__.py  registry.py
src/test_data_agent/schemas/entities/: __init__.py  analytics_event.py  cart.py  cart_item.py  coupon.py  customer.py  customer_preferences.py  discount.py  exchange.py  favorites.py  fraud_check.py  gift_card.py  inventory.py  loyalty_member.py  notification.py  order.py  order_item.py  order_status.py  payment.py  payment_authorization.py  product.py  promotion.py  rating.py  refund.py  return_request.py  review.py  saved_cart.py  search_query.py  shipment.py  shipping.py  stock.py  stock_alert.py  subscription.py  support_ticket.py  tracking.py  user.py  wishlist.py
src/test_data_agent/scripts/: seed_rag.py
src/test_data_agent/server/: __init__.py  grpc_server.py  health.py  http_routes.py
src/test_data_agent/utils/: __init__.py  logging.py  metrics.py  tracing.py
src/test_data_agent/validators/: __init__.py  coherence.py  constraint.py
tests/: __init__.py  conftest.py
tests/e2e/: test_full_flow.py
tests/integration/: test_grpc_server.py
tests/performance/: test_load.py
tests/unit/: test_claude_client.py  test_config.py  test_constraint_validator.py  test_health.py  test_logging.py  test_redis_client.py  test_schema_registry.py  test_traditional_generator.py
ui/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/docs/: page.tsx
ui/src/app/schemas/: page.tsx
ui/src/components/generator/: generator-form.tsx  scenario-manager.tsx  schema-editor.tsx
ui/src/components/layout/: header.tsx  main-layout.tsx  (+1 more)
ui/src/stores/: generator-store.ts
ui/src/types/: api.ts
ui/tests/: setup.ts
ui/tests/components/: data-preview.test.tsx  generator-form.test.tsx  options-panel.test.tsx  scenario-builder.test.tsx  sidebar.test.tsx
ui/tests/stores/: generator-store.test.ts
(+8 files in other folders)
